--- a/css/style.css
+++ b/css/style.css
@@ -141,13 +141,7 @@ a.sidebar-link{
     margin-left: -264px;
 }
 
-/* FOoter and Nav */
-@media (max-width:767.98px){
-    .navbar,
-    footer{
-        width: 100vw;
-    }
-}
+
 
 
 /* Theme Toggler */
@@ -190,6 +184,7 @@ html[data-bs-theme="light"] .theme-toggle .fa-sun{
 
 }
 
+
 .bar{
     display: flex;
     justify-content: space-between;
@@ -210,4 +205,18 @@ html[data-bs-theme="light"] .theme-toggle .fa-sun{
     color: #000000;
     font-weight: 800;
     font-size: 2rem;
+}
+/* FOoter and Nav */
+@media (max-width:767.98px){
+    .navbar,
+    footer{
+        width: 100vw;
+    }
+    .charts{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin: 0 1rem;
+        
+    }
 }
